--- a/index.html
+++ b/index.html
@@ -177,6 +177,18 @@
 
     <!-- DIGITAL AFTERLIFE GÖRÜNÜMÜ -->
     <div id="afterlife-view" class="view">
+        <div class="howto-hint" tabindex="0">
+          <span class="howto-label">Nasıl kullanılır?</span>
+          <div class="howto-popover">
+            <h4>Digital Afterlife • Kısa Rehber</h4>
+            <ul>
+              <li>Aşağı kaydırarak bölümleri keşfet.</li>
+              <li>Sol üstten “Geri” ile seçim ekranına dön.</li>
+              <li>En alttaki “Mail Gönder” ile iletişime geç.</li>
+              <li>İpucu: Animasyonlar yoğunsa tarayıcıda donanım hızlandırmayı aç.</li>
+            </ul>
+          </div>
+        </div>
         <button class="back-to-selection fixed top-5 left-5 z-50 text-slate-400 hover:text-white transition-colors bg-black/20 backdrop-blur-md p-3 rounded-full">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
         </button>
@@ -246,6 +258,19 @@
     
 <!-- KΔIRA SESLİ ASİSTAN GÖRÜNÜMÜ (YENİ) -->
   <div id="asistan-view" class="view">
+    <div class="howto-hint" tabindex="0">
+      <span class="howto-label">Nasıl kullanılır?</span>
+      <div class="howto-popover">
+        <h4>KΔIRA Sesli Asistan • Kısa Rehber</h4>
+        <ul>
+          <li>Önce yetkilendirme ekranında giriş yap.</li>
+          <li>Mikrofon simgesine dokun, tarayıcı iznini ver ve konuş.</li>
+          <li>Yazıyla konuşmak için alttaki metin alanını kullan.</li>
+          <li>“Sohbeti Temizle” ile geçmişi sıfırlayabilirsin.</li>
+          <li>İpucu: Ekran kilitlenince kayıt durur; geri gelince devam edebilirsin.</li>
+        </ul>
+      </div>
+    </div>
     <button class="back-to-selection fixed top-5 left-5 z-50 text-slate-400 hover:text-white transition-colors bg-black/20 backdrop-blur-md p-3 rounded-full">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
   </button>
@@ -313,6 +338,19 @@
 </div>
     <!-- FOTOĞRAF EDİTÖRÜ GÖRÜNÜMÜ -->
     <div id="editor-view" class="view">
+        <div class="howto-hint" tabindex="0">
+          <span class="howto-label">Nasıl kullanılır?</span>
+          <div class="howto-popover">
+            <h4>Fotoğraf Editörü • Kısa Rehber</h4>
+            <ul>
+              <li>Sol panelden fotoğraf yükle (sürükle-bırak veya tıkla).</li>
+              <li>Sağ panel sonuçları gösterir; “Maske” ile bölgesel iyileştir.</li>
+              <li>Rol/Ağırlık ile referans görsellerin etkisini ayarla.</li>
+              <li>Promptu Türkçe yazabilirsin; Negatif satırı için “Negatif:” kullan.</li>
+              <li>İpucu: Sonucu indirmek için “İndir” simgesini kullan.</li>
+            </ul>
+          </div>
+        </div>
         <button class="back-to-selection fixed top-5 left-5 z-50 text-slate-400 hover:text-white transition-colors bg-black/20 backdrop-blur-md p-3 rounded-full">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
         </button>
@@ -321,7 +359,20 @@
     
     <!-- EVRENSEL SOHBET GÖRÜNÜMÜ -->
     <div id="chat-view" class="view bg-gray-900">
-         <button class="back-to-selection fixed top-5 left-5 z-50 text-slate-400 hover:text-white transition-colors bg-black/20 backdrop-blur-md p-3 rounded-full">
+        <div class="howto-hint" tabindex="0">
+          <span class="howto-label">Nasıl kullanılır?</span>
+          <div class="howto-popover">
+            <h4>Evrensel Sohbet • Kısa Rehber</h4>
+            <ul>
+              <li>Sağlayıcı ve model seç; gerekirse anahtarı gir.</li>
+              <li>“Sunucudan Anahtarları Al” ile otomatik doldurmayı dene.</li>
+              <li>“Sistem Promptu”nu yaz ve “Uygula”ya tıkla.</li>
+              <li>Mesajını yaz, gönder; “Sohbeti Temizle” ile sıfırla.</li>
+              <li>İpucu: Uzun konuşmalar için önceki 10 mesaj bağlamda tutulur.</li>
+            </ul>
+          </div>
+        </div>
+        <button class="back-to-selection fixed top-5 left-5 z-50 text-slate-400 hover:text-white transition-colors bg-black/20 backdrop-blur-md p-3 rounded-full">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
         </button>
         <div class="w-full max-w-4xl mx-auto flex flex-col h-screen p-4">
@@ -392,6 +443,19 @@
 
     <!-- KΔIRA CODE LAB GÖRÜNÜMÜ -->
     <div id="code-view" class="view bg-gray-900">
+        <div class="howto-hint" tabindex="0">
+          <span class="howto-label">Nasıl kullanılır?</span>
+          <div class="howto-popover">
+            <h4>Code Lab • Kısa Rehber</h4>
+            <ul>
+              <li>“Yeni” ile dosya oluştur; “Kaydet” ile sakla.</li>
+              <li>“Çalıştır” çıktı penceresinde sonucu gösterir; “Sıfırla” temizler.</li>
+              <li>AI için modeli seç, istemini yaz, “Öneri Üret”e bas.</li>
+              <li>“Kodu Uygula” ile öneriyi dosyana yama olarak uygula.</li>
+              <li>Hata olduysa “Geri Al” ile son değişikliği geri al.</li>
+            </ul>
+          </div>
+        </div>
         <button class="back-to-selection fixed top-5 left-5 z-50 text-slate-400 hover:text-white transition-colors bg-black/20 backdrop-blur-md p-3 rounded-full">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
         </button>
@@ -452,7 +516,20 @@
 
     <!-- NASA GÖZLEM PLATFORMU (ADIM 1) -->
     <div id="nasa-view" class="view">
-  <div class="hubble-skin">
+        <div class="howto-hint" tabindex="0">
+          <span class="howto-label">Nasıl kullanılır?</span>
+          <div class="howto-popover">
+            <h4>Gözlem Platformu • Kısa Rehber</h4>
+            <ul>
+              <li>Üst sekmelerden bölüm seç: APOD, Mars, Kütüphane.</li>
+              <li>Gökyüzü Haritasında sürükle-pan, tekerlek-zoom, sağ tık menü.</li>
+              <li>Mars bölümünde rover/tarih/kamera seçip “Getir”e bas.</li>
+              <li>API durumunu üstteki kutudan takip edebilirsin.</li>
+              <li>İpucu: Yakınlaştırma için +/− kontrollerini kullan.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="hubble-skin">
         <button class="back-to-selection fixed top-5 left-5 z-50 text-slate-400 hover:text-white transition-colors bg-black/20 backdrop-blur-md p-3 rounded-full">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
         </button>
