--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     <link rel="stylesheet" href="css/intro.css">
     <link rel="stylesheet" href="css/kaira-debug-overrides.css">
     <link rel="stylesheet" href="css/main.css">
-    
+    <!-- İconlar -->
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
     <!-- React için Gerekli Scriptler -->
     <script>
       // Fill meta with API base for learning-bot embed
