--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <link rel="stylesheet" href="css/kaira-debug-overrides.css">
     <link rel="stylesheet" href="css/main.css">
     <!-- İconlar -->
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="manifest" href="site.webmanifest">
     <!-- React için Gerekli Scriptler -->
     <script>
       // Fill meta with API base for learning-bot embed
@@ -353,8 +353,8 @@
               <li>Sol panel: kaynak fotoğraf(larını) yükle (sürükle‑bırak veya tıkla).</li>
               <li>Sağ panel: sonuç önizlemesi; “Maske” ile bölgesel iyileştirme uygula.</li>
               <li>Rol/Ağırlık: her referansın etkisini ayarla (ör. Yüz ≥ %80 kimlik kilidi).</li>
-              <li>Prompt: Türkçe yaz; olumsuzlar için son satıra “Negatif: ...”.</li>
-              <li>Çeviri ve üretim için Gemini anahtarına ihtiyaç duyabilir.</li>
+              <li>Kullanıcı yazısı ile başlayan alana istediğinizi yazın ve Öneri Al butonuna tıklayın.</li>
+              <li>Yapay zeka promptunuzu yazdıktan sonra inceleyin ve Değiştir butonuna tıklayın.</li>
               <li>“İndir” ile sonucu kaydet; gerekirse “Bölgeyi İyileştir” ile maskeli tekrar dene.</li>
             </ul>
           </div>
@@ -533,7 +533,7 @@
             <ul>
               <li>Üst sekmeler: APOD (günün görseli), Mars (rover foto), Kütüphane.</li>
               <li>Gökyüzü Haritası: sürükle‑pan, tekerlek‑zoom, sağ tık menü.</li>
-              <li>Alt kısımdaki +/− ile hızlı yakınlaştır; Full Sky ile geneli gör.</li>
+              <li>Fare ile harita üzerinde etkileşimde bulunabilirsiniz.</li>
               <li>Mars: rover/tarih/kamera seç, “Getir” ile görselleri listele.</li>
               <li>API anahtarlarının durumunu üstteki kutudan kontrol et.</li>
             </ul>
