--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
     <link rel="stylesheet" href="css/intro.css">
     <link rel="stylesheet" href="css/kaira-debug-overrides.css">
     <link rel="stylesheet" href="css/main.css">
-    <!-- İconlar -->
-    <link rel="icon" href="favicon.ico" sizes="any">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="manifest" href="site.webmanifest">
+    <!-- İkonlar / PWA -->
+    <meta name="theme-color" content="#111827">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" href="/favicon.ico" sizes="any" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <!-- React için Gerekli Scriptler -->
     <script>
       // Fill meta with API base for learning-bot embed
