--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
                 <div id="select-codelab" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
                     <h2 class="text-3xl font-serif font-semibold text-yellow-400 mb-3">KΔIRA Code Lab</h2>
-                    <p class="text-slate-400">Canvas üzerinde kod yaz, çalıştır ve AI ile geliştirmeyi dene.</p>
+                    <p class="text-slate-400">Canvas üzerinde kod yaz, çalıştır ve AI ile geliştirmeyi dene.(Test Aşamasında)</p>
                 </div>
             </div>
         </div>
